--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     <!-- Template for a card, initially hidden -->
     <div class="card" style="display: none;">
         <div class="card-content">
-            <!-- Title of the TV show -->
+            <!-- Title of the destination -->
             <h2>Name of place</h2>
-            <!-- Image of the TV show poster -->
+            <!-- Image of the destination -->
             <img src="" alt="Name of Place">
             <!-- List of bullet points -->
             <ul>
